--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 body {
     font-family: "Roboto", "Helvetica", "Sans-serif";
     margin: 0;
-    padding: 0;
+    padding: 0 0;
     font-size: 1rem;
     font-weight: 400;
     color: var(--whitish);
