--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     font-weight: 400;
     color: var(--whitish);
     line-height: 1.7;
-    background:var(--greydarker);
+    background:var(--greydarker) 
 }
 
 * {
