--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 0 0;
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 400;lll
     color: var(--whitish);
     line-height: 1.7;
     background:var(--greydarker) 
